# thermostrife

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  network-tests.yml  release.yml  tests.yml
_legacy/: README.md  analysis.py
data/: README.md
data/raw/: event_geo.csv  peaceful_gatherings.csv  peaceful_geo.csv  uprisings_temperature.csv
data/raw/observatories/hadcet/: maxtemp_daily_totals.txt  meantemp_daily_totals.txt  mintemp_daily_totals.txt
docs/: changelog.md  conf.py  getting_started.md  index.md  methods.md  pipeline.md  requirements.txt
docs/api/: backfill.md  baseline.md  cli.md  constants.md  inference.md  lookup.md  viz.md
docs/development/: ci_cd.md  contributing.md  release_process.md
reports/: cascade_validation.csv  cascade_validation.md  inference_results.json  inference_results.md  inference_results_peaceful.json  inference_results_peaceful.md  peaceful_vs_violent.md  stratification.json  stratification.md  tier1_validation.csv  tier1_validation.md
reports/figs/: anomaly_by_year.csv  anomaly_raincloud.csv  forest_h2.csv  forest_strata.csv  null_density.csv  peaceful_vs_violent.csv  superposed_epoch.csv  warming_stripes_timeline.csv
reports/figs_peaceful/: anomaly_by_year.csv  anomaly_raincloud.csv  null_density.csv
scripts/: build_geo_map.py  compare_panels.py  run_inference.py  run_stratifications.py  validate_cascade.py  validate_tier1.py
tests/: test_constants.py  test_data.py  test_inference.py  test_validation.py  test_viz.py
thermostrife/: __init__.py  backfill.py  baseline.py  cli.py  constants.py  inference.py  lookup.py  viz.py
thermostrife/sources/: __init__.py  era5_src.py  hadcet_src.py  meteostat_src.py  twentycr_src.py
