[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermostrife"
version = "0.1.0"
description = "Historical-uprisings climate companion to ThermoKourt — case-crossover test of temperature anomalies on days of mass civil strife (1750–2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bart R.H. Geurten", email = "bart.geurten@otago.ac.nz"},
]
keywords = [
    "climate-conflict", "heat-aggression", "uprisings", "historical-data",
    "case-crossover", "permutation-test", "criminology", "violence",
    "computational-social-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
climate = [
    "meteostat>=1.6",
    "cdsapi>=0.6",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "requests>=2.31",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "sphinx>=7.2",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
]
all = ["thermostrife[climate,dev]"]

[project.scripts]
thermostrife-backfill = "thermostrife.backfill:main"
thermostrife-analyse = "thermostrife.cli:main"

[project.urls]
Homepage = "https://github.com/zerotonin/thermostrife"
Documentation = "https://zerotonin.github.io/thermostrife/"
Repository = "https://github.com/zerotonin/thermostrife"
Issues = "https://github.com/zerotonin/thermostrife/issues"
Companion = "https://github.com/zerotonin/thermokourt"

[tool.setuptools.packages.find]
include = ["thermostrife*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
